<resources>
    <string name="app_name">FishMarket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="change_language">Change Language</string>
    <string name="my_listing">My Listing</string>
    <string name="my_favourites">My Favourites</string>
    <string name="share_app">Share App</string>
    <string name="videos">Videos</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="discalaimer">Disclaimer</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sell">Sell</string>
    <string name="store">Store</string>
    <string name="charcha">Charcha</string>
    <string name="discover">Discover</string>
    <string name="mobile">Mobile No</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verify">Verify</string>
    <string name="we_will_send_you_a_otp_message">We will send you a OTP message</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="address_of_fish_farm">Address of fish farm</string>
    <string name="weight_per_pcs">Weight Per Pcs</string>
    <string name="password">Password</string>
    <string name="email_optional">Email(Optional)</string>
    <string name="confirm_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="remove_image">Remove Image</string>
    <string name="change_image">Change Image</string>
    <string name="note_txt"><b>Note : </b>Maximum 5 category can be choose.</string>
    <string name="product">Product</string>
    <string name="my_order">My Order</string>
    <string name="account">Account</string>
    <string name="add_product">Add Product</string>
    <string name="profile">Profile</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="notification">Notification</string>
    <string name="sub_category">Sub Category</string>
    <string name="service_request">Service Request</string>
    <string name="wallet">Wallet</string>
    <string name="my_addresses">My Addresses</string>
    <string name="Rs">₹</string>
    <string name="no_data_found">No data found!</string>
    <string name="you_have_no_favourite_product">You have no favourite product!</string>
    <string name="fish_colon">Fish :</string>
</resources>