<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/product"
        android:title="@string/product" />
    <item
        android:id="@+id/nav_sell"
        android:icon="@drawable/sell"
        android:title="@string/sell" />
    <item
        android:id="@+id/nav_my_order"
        android:icon="@drawable/order"
        android:title="@string/my_order" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/user"
        android:title="@string/account" />

    <!--<item
        android:id="@+id/nav_store"
        android:icon="@drawable/shop"
        android:title="@string/store" />
    <item
        android:id="@+id/nav_charcha"
        android:icon="@drawable/charcha"
        android:title="@string/charcha" />
    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/discover"
        android:title="@string/discover" />
    -->

</menu>