<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fishmarket.view.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_sub_category"
            app:destination="@id/nav_sub_category"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.fishmarket.view.product.ProductCategoryFragment"
        android:label="@string/product"
        tools:layout="@layout/frag_product_category" >
        <action
            android:id="@+id/action_nav_product_to_nav_sub_category"
            app:destination="@id/nav_sub_category"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_sub_category"
        android:name="com.example.fishmarket.view.product.SubCategoryFragment"
        android:label="@string/sub_category"
        tools:layout="@layout/frag_product_sub_category" >
        <action
            android:id="@+id/action_nav_sub_category_to_nav_product_by_sub"
            app:destination="@id/nav_product_by_sub"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_product_by_sub"
        android:name="com.example.fishmarket.view.product.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/frag_product" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.example.fishmarket.view.SellFragment"
        android:label="@string/sell"
        tools:layout="@layout/frag_sell" />

    <fragment
        android:id="@+id/nav_my_order"
        android:name="com.example.fishmarket.view.MyOrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/frag_my_order" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.fishmarket.view.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.fishmarket.view.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/frag_store" />

    <fragment
        android:id="@+id/nav_discover"
        android:name="com.example.fishmarket.view.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/frag_discover" />
    <fragment
        android:id="@+id/nav_charcha"
        android:name="com.example.fishmarket.view.CharchaFragment"
        android:label="@string/charcha"
        tools:layout="@layout/frag_charcha" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fishmarket.view.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fishmarket.view.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>