<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_user_placeholder" />


            </FrameLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:id="@+id/tv_remove"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:text="@string/remove_image"/>
                <TextView
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:id="@+id/tv_change"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@color/teal_700"
                    android:textColor="@color/white"
                    android:text="@string/change_image"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

           <FrameLayout
               android:layout_marginTop="@dimen/dp_10"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/input_address"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/address"
                   app:boxStrokeColor="@color/black"
                   app:boxStrokeWidthFocused="1dp"
                   app:endIconMode="clear_text"
                   >

                   <AutoCompleteTextView
                       android:id="@+id/et_address"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:paddingTop="@dimen/dp_15"
                       android:paddingBottom="@dimen/dp_15"
                       android:paddingLeft="@dimen/dp_15"
                       android:paddingRight="@dimen/dp_45"
                       android:fontFamily="@font/roboto_regular"
                       android:inputType="textPersonName"
                       android:textColor="@color/black"
                       android:textSize="14sp" />
               </com.google.android.material.textfield.TextInputLayout>
               <ImageView
                   android:id="@+id/iv_location"
                   android:layout_width="@dimen/dp_30"
                   android:layout_height="@dimen/dp_30"
                   android:layout_marginRight="@dimen/dp_5"
                   android:layout_gravity="right|center_vertical"
                   android:src="@drawable/ic_my_location"/>

           </FrameLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/dp_5"
                    android:id="@+id/input_state"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:id="@+id/input_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/dp_5"
                    android:id="@+id/input_country"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_country"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:id="@+id/input_zipcode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zipcode"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <TextView
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/txt18"
                android:gravity="center"
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/purple_700"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/update"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>